2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b7

* Fix: Album- and Photoview works now also again (when not logged in).

2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b6

* Fix: Frontpage now works again (when not logged in).

2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b5

* Fix: init.php

2010-11-22 Jens Tkotz <jens@peino.de> 1.5.11-svn-b4

* Configuration Wizard works now completely again.

2010-11-22 Jens Tkotz <jens@peino.de> 1.5.11-svn-b3

* CHANGE:
	Set PHP Minimum to 5.3.0 !!!

* Fix:

  Make first page of Config-Wizard work again.
	
* Fix:
  $foo = & new() to $foo = new()
  ereg() -> preg_match
  ereg_replace()	->  preg_replace
  set_magic_quotes_runtime(0) -> ini_set('magic_quotes_runtime', 0)

2010-11-22 Jens Tkotz <jens@peino.de> 1.5.11-svn-b2

 * Fix: $op and $mop were not initialized in a fresh install.

2010-11-21 Jens Tkotz <jens@peino.de> 1.5.11-svn-b1

* Start of Gallery 1.5.11 ; PHP 5.3 compatibility release.

2008-11-18 Chris Kelly <ckdake@ckdake.com> 1.5.10

 * Release: 1.5.10

2008-11-18 Jens Tkotz <jens@peino.de> 1.5.10-svn-b11

 * FIX: Do load load init.php for colorpicker as this overwrites session
        infos about embedded environment.

   Thanks to bignellrp from forum.

 * Fix: Add rebuild_thumbs.php to list of allowed files to include.

 * Fix: Declare rearrange popup as a popup, so the enviroment (e.g. joomla)
        is not loaded. Same for reset clicks popup.

 * Change: Added popup footer at various places.

 * Change: Some little code nicifies.

2008-11-11 Jens Tkotz <jens@peino.de> 1.5.10-svn-b10

 * Fix: Delete Imageareas when rotating or resizing an image.

2008-11-01 Jens Tkotz <jens@peino.de> 1.5.10-svn-b9

 *** SECURITY FIX ***

 In environments with register globals it was possible to gain admin access
 via abusing cookies. 
 This bug affects all Gallery 1.x version from 1.5.8-svn-b34 on.

 The Gallery team would like to thank John Hisdock for gently reporting this
 and give us time to make an adequate fix.
